# aiboarding

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.json  railway.slack.json
.github/workflows/: ci.yml
data/: people.yaml
data/sample_docs/: company-handbook.md  engineering-onboarding.md  product-playbook.md
data/sample_docs/company/: communication-practices.md  glossary.md  goals-okrs-2026.md  inclusive-language-guide.md  mission-vision-values.md  new-hire-faq.md  org-chart-and-teams.md  product-roadmap-2026.md  raci-matrix.md
data/sample_docs/engineering/: architecture-overview.md  incident-management.md  pr-review-guide.md  trunk-based-development.md
data/sample_docs/runbooks/: custom-engineering-runbook.md  data-runbook.md  devops-runbook.md  it-runbook.md  qa-runbook.md  security-runbook.md  website-runbook.md
docs/: DEPLOY_RAILWAY.md  POC_SETUP.md  confluence-seed-pages.md
scripts/: railway_start.sh  slack_start.sh
specs/: SPEC-001-vision-and-scope.md  SPEC-002-architecture.md  SPEC-003-ingestion-connectors.md  SPEC-004-agent-and-audit.md  SPEC-005-90day-plan.md  SPEC-006-api-cli-integrations.md
src/aiboarding/: __init__.py  cli.py  config.py  container.py  models.py  tracing.py
src/aiboarding/agent/: __init__.py  audit.py  graph.py  llm.py  nodes.py  state.py
src/aiboarding/api/: __init__.py  server.py
src/aiboarding/connectors/: __init__.py  base.py  local.py  (+3 more)
tests/: conftest.py  test_agent.py  test_api.py  test_ingestion.py  test_integrations.py  test_knowledge.py  test_persistence.py  test_plans.py
(+19 files in other folders)
