[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiboarding"
version = "0.1.0"
description = "AI-powered onboarding assistant: 90-day success plans, Q&A over company knowledge, people connections, and doc referrals. Built on LangGraph for full auditability."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alfredo Pizana" }]
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "pypdf>=4.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "typer>=0.12.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]
gdrive = [
    "google-api-python-client>=2.120.0",
    "google-auth-oauthlib>=1.2.0",
]
slack = [
    "slack-sdk>=3.27.0",
]

[project.scripts]
aiboarding = "aiboarding.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/aiboarding"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
